--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,9 @@ repositories {
 
 dependencies {
 	// Base dependencies
-	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter:2.7.0'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.0'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.0'
 	implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.1.0.Final'
 
 	// Lombok to reduce boilerplate code
@@ -32,11 +32,11 @@ dependencies {
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 
 	// Spring security
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security:2.7.0'
 
 	// Database connection
 	runtimeOnly 'com.h2database:h2:1.4.200'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.0'
 }
 
 tasks.named('test') {
