--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security:2.7.0'
 
 	// Database connection
-	runtimeOnly 'com.h2database:h2:1.4.200'
+//	runtimeOnly 'com.h2database:h2:1.4.200'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.0'
+	implementation 'mysql:mysql-connector-java:8.0.15'
 }
 
 tasks.named('test') {
