--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,15 @@ management.endpoint.shutdown.enabled=true
 spring.jackson.serialization.INDENT_OUTPUT=true
 
 # Database stuff
-spring.datasource.url=jdbc:h2:file:./db/service_db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.url=jdbc:mysql://localhost:3306/antifraud?createDatabaseIfNotExist=true&serverTimezone=Europe/Berlin
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
 spring.datasource.password=
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+# H2 console
 spring.h2.console.enabled=true
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
