--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jackson.serialization.INDENT_OUTPUT=true
 spring.datasource.url=jdbc:mysql://localhost:3306/antifraud?createDatabaseIfNotExist=true&serverTimezone=Europe/Berlin
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
