--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,14 @@ management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 spring.jackson.serialization.INDENT_OUTPUT=true
 
+# Import secrets from environment variables
+spring.config.import=file:src/main/resources/secrets.env[.properties]
+
 # Database stuff
-spring.datasource.url=jdbc:mysql://localhost:3306/antifraud?createDatabaseIfNotExist=true&serverTimezone=Europe/Berlin
+spring.datasource.url=jdbc:${MYSQL_DATABASE_URL}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=${MYSQL_DATABASE_USERNAME}
+spring.datasource.password=${MYSQL_DATABASE_PASSWORD}
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
