Added a custom error page for handling 403, 404 and 500 specifically
All other errors are caught on the same page but with a default phrase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.jackson.serialization.INDENT_OUTPUT=true
 # Import secrets from environment variables
 spring.config.import=file:src/main/resources/secrets.env[.properties]
 
+# Disable white label error page and set error path
+server.error.whitelabel.enabled=false
+server.error.path=/error
+
 # Database stuff
 spring.datasource.url=jdbc:${MYSQL_DATABASE_URL}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
