--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,17 +4,14 @@ management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 spring.jackson.serialization.INDENT_OUTPUT=true
 
-# Import secrets from environment variables
-spring.config.import=file:src/main/resources/secrets.env[.properties]
-
 # Disable white label error page and set error path
 server.error.whitelabel.enabled=false
 
 # Database stuff
-spring.datasource.url=jdbc:${MYSQL_DATABASE_URL}
+spring.datasource.url=jdbc:${env.MYSQL_DATABASE_URL}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${MYSQL_DATABASE_USERNAME}
-spring.datasource.password=${MYSQL_DATABASE_PASSWORD}
+spring.datasource.username=${env.MYSQL_DATABASE_USERNAME}
+spring.datasource.password=${env.MYSQL_DATABASE_PASSWORD}
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
